--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-gtm-module": "^2.0.11",
     "react-hook-form": "^7.14.2",
     "react-select": "^4.3.1",
     "react-use-pagination": "^2.0.1",
@@ -39,6 +40,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/react": "17.0.19",
+    "@types/react-gtm-module": "^2.0.1",
     "@types/react-select": "^4.0.17",
     "@types/tailwindcss": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
