--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-gtm-module": "^2.0.11",
     "react-hook-form": "^7.14.2",
     "react-select": "^4.3.1",
+    "react-toastify": "^8.0.2",
     "react-use-pagination": "^2.0.1",
     "sharp": "^0.29.0",
     "tailwindcss": "^2.2.9"
