--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,8 @@ on:
         description: "Test scenario tags"
 
 env:
-  REGISTRY: ${{ secrets.PRIVATE_REGISTRY }}
+  AWS_REGISTRY: ${{ secrets.AWS_PRIVATE_REGISTRY }}
+  AWS_REPOSITORY: ${{ github.event.repository.name }}-registry-repository
   IMAGE_NAME: ${{ github.event.repository.name }}-stg
   CF_SPACE_ID: ${{ secrets.CF_SPACE_ID }}
   CF_DELIVERY_ACCESS_TOKEN: ${{ secrets.CF_DELIVERY_ACCESS_TOKEN }}
@@ -34,35 +35,45 @@ jobs:
     steps:
       - name: Checkout main
         uses: actions/checkout@v2
+      
+	    - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_REGISTRY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_REGISTRY }}
+          aws-region: us-east-2
+      
+	    - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 
       - name: Build container image
-        run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) --build-arg CF_SPACE_ID=$CF_SPACE_ID --build-arg CF_DELIVERY_ACCESS_TOKEN=$CF_DELIVERY_ACCESS_TOKEN --build-arg CF_PREVIEW_ACCESS_TOKEN=$CF_PREVIEW_ACCESS_TOKEN --build-arg CF_ENVIRONMENT=$CF_ENVIRONMENT --build-arg PATREON_ACCESS_TOKEN=$PATREON_ACCESS_TOKEN --build-arg PATREON_CAMPAIGN_ID=$PATREON_CAMPAIGN_ID --build-arg GOOGLE_TAG_MANAGER_CONTAINER_ID=$GOOGLE_TAG_MANAGER_CONTAINER_ID .
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          registry: db-admin.veganhacktivists.org
-          username: ${{ secrets.REGISTRY_USER }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
-
-      - name: Push image to Container Registry
-        run: docker push ${REGISTRY}/${IMAGE_NAME}:$(echo $GITHUB_SHA | head -c7)
+        run: |
+          docker build -t $AWS_REGISTRY/$AWS_REPOSITORY:$IMAGE_NAME --build-arg CF_SPACE_ID=$CF_SPACE_ID --build-arg CF_DELIVERY_ACCESS_TOKEN=$CF_DELIVERY_ACCESS_TOKEN --build-arg CF_PREVIEW_ACCESS_TOKEN=$CF_PREVIEW_ACCESS_TOKEN --build-arg CF_ENVIRONMENT=$CF_ENVIRONMENT --build-arg PATREON_ACCESS_TOKEN=$PATREON_ACCESS_TOKEN --build-arg PATREON_CAMPAIGN_ID=$PATREON_CAMPAIGN_ID --build-arg GOOGLE_TAG_MANAGER_CONTAINER_ID=$GOOGLE_TAG_MANAGER_CONTAINER_ID .
+          docker push $AWS_REGISTRY/$AWS_REPOSITORY:$IMAGE_NAME
 
   deploy:
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
     needs: build_and_push
+	  steps:
 
-    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_REGISTRY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_REGISTRY }}
+          aws-region: us-east-2
+
       - name: Deploy to Digital Ocean droplet via SSH action
         uses: appleboy/ssh-action@v0.1.3
         with:
           HOST: ${{ secrets.HOST }}
           USERNAME: ${{ secrets.USERNAME }}
           KEY: ${{ secrets.SSH_SECRET_KEY }}
-          envs: IMAGE_NAME,REGISTRY,GITHUB_SHA,COMMAND,CF_SPACE_ID,CF_DELIVERY_ACCESS_TOKEN,CF_PREVIEW_ACCESS_TOKEN,CF_ENVIRONMENT,MAILGUN_API_KEY,PATREON_ACCESS_TOKEN,PATREON_CAMPAIGN_ID,GOOGLE_TAG_MANAGER_CONTAINER_ID
+          envs: IMAGE_NAME,AWS_REGISTRY,AWS_REPOSITORY,GITHUB_SHA,COMMAND,CF_SPACE_ID,CF_DELIVERY_ACCESS_TOKEN,CF_PREVIEW_ACCESS_TOKEN,CF_ENVIRONMENT,MAILGUN_API_KEY,PATREON_ACCESS_TOKEN,PATREON_CAMPAIGN_ID,GOOGLE_TAG_MANAGER_CONTAINER_ID
           script: |
-            bash /home/deploy/clean.sh
+			      aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin $AWS_REGISTRY
             docker pull ${REGISTRY}/${IMAGE_NAME}:$(echo $GITHUB_SHA | head -c7)
             docker stop $IMAGE_NAME
             docker rm $IMAGE_NAME
@@ -89,4 +100,4 @@ jobs:
             --label traefik.http.routers.app-https.entrypoints=https \
             --label traefik.http.services.app.loadbalancer.server.port=80 \
             --network=traefik-public \
-            --name $IMAGE_NAME ${REGISTRY}/${IMAGE_NAME}:$(echo $GITHUB_SHA | head -c7)
+            --name $IMAGE_NAME ${AWS_REGISTRY}/$echo $AWS_REPOSITORY:$(echo $IMAGE_NAME)
