--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ on:
 
 env:
   AWS_REGISTRY: ${{ secrets.AWS_PRIVATE_REGISTRY }}
-  AWS_REPOSITORY: ${{ github.event.repository.name }}-registry-repository
+  AWS_REPOSITORY: vh-site-registry-repository
   IMAGE_NAME: ${{ github.event.repository.name }}-stg
   CF_SPACE_ID: ${{ secrets.CF_SPACE_ID }}
   CF_DELIVERY_ACCESS_TOKEN: ${{ secrets.CF_DELIVERY_ACCESS_TOKEN }}
