--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,4 +98,4 @@ jobs:
             --label traefik.http.routers.app-https.entrypoints=https \
             --label traefik.http.services.app.loadbalancer.server.port=80 \
             --network=traefik-public \
-            --name $IMAGE_NAME ${AWS_REGISTRY}/$echo $AWS_REPOSITORY:$(echo $IMAGE_NAME)
+            --name $(echo IMAGE_NAME) $(echo $AWS_REGISTRY)/$(echo $AWS_REPOSITORY):$(echo $IMAGE_NAME)
