--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,8 @@ on:
         description: "Log level"
         required: true
         default: "warning"
-      tags: description: "Test scenario tags"
+      tags:
+        description: "Test scenario tags"
 
 env:
   AWS_REGISTRY: ${{ secrets.AWS_PRIVATE_REGISTRY }}
@@ -48,7 +49,6 @@ jobs:
         run: |
           docker build -t $AWS_REGISTRY/$AWS_REPOSITORY:$IMAGE_NAME --build-arg CF_SPACE_ID=$CF_SPACE_ID --build-arg CF_DELIVERY_ACCESS_TOKEN=$CF_DELIVERY_ACCESS_TOKEN --build-arg CF_PREVIEW_ACCESS_TOKEN=$CF_PREVIEW_ACCESS_TOKEN --build-arg CF_ENVIRONMENT=$CF_ENVIRONMENT --build-arg PATREON_ACCESS_TOKEN=$PATREON_ACCESS_TOKEN --build-arg PATREON_CAMPAIGN_ID=$PATREON_CAMPAIGN_ID --build-arg GOOGLE_TAG_MANAGER_CONTAINER_ID=$GOOGLE_TAG_MANAGER_CONTAINER_ID .
           docker push $AWS_REGISTRY/$AWS_REPOSITORY:$IMAGE_NAME
-
   deploy:
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
@@ -71,7 +71,7 @@ jobs:
           envs: IMAGE_NAME,AWS_REGISTRY,AWS_REPOSITORY,GITHUB_SHA,COMMAND,CF_SPACE_ID,CF_DELIVERY_ACCESS_TOKEN,CF_PREVIEW_ACCESS_TOKEN,CF_ENVIRONMENT,MAILGUN_API_KEY,PATREON_ACCESS_TOKEN,PATREON_CAMPAIGN_ID,GOOGLE_TAG_MANAGER_CONTAINER_ID
           script: |
             aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin $AWS_REGISTRY
-            docker pull $(echo $AWS_REGISTRY)/$(echo $AWS_REPOSITORY):$(echo $IMAGE_NAME)
+            docker pull ${REGISTRY}/${IMAGE_NAME}:$(echo $GITHUB_SHA | head -c7)
             docker stop $IMAGE_NAME
             docker rm $IMAGE_NAME
             docker run -d \
@@ -88,7 +88,7 @@ jobs:
             --label traefik.docker.network=traefik-public \
             --label traefik.http.middlewares.https-redirect.redirectscheme.scheme=https \
             --label traefik.http.middlewares.https-redirect.redirectscheme.permanent=true \
-            --label traefik.http.routers.app-http.middlewares=https-redirect \
+            --label traefik.http.routers.app-http.middlewares=https-redirect 
             --label traefik.http.routers.app-http.rule=Host\(\`veganhacktivists.org\`\) \
             --label traefik.http.routers.app-http.entrypoints=http \
             --label traefik.http.routers.app-https.rule=Host\(\`veganhacktivists.org\`\) \
@@ -97,4 +97,4 @@ jobs:
             --label traefik.http.routers.app-https.entrypoints=https \
             --label traefik.http.services.app.loadbalancer.server.port=80 \
             --network=traefik-public \
-            --name $(echo $IMAGE_NAME) $(echo $AWS_REGISTRY)/$(echo $AWS_REPOSITORY):$(echo $IMAGE_NAME)
+            --name $(echo $IMAGE_NAME) $(echo $AWS_REGISTRY)/$(echo $AWS_REPOSITORY):$(echo $IMAGE_NAME)\
