--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,6 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-
       - name: Build container image
         run: |
           docker build -t $AWS_REGISTRY/$AWS_REPOSITORY:$IMAGE_NAME --build-arg CF_SPACE_ID=$CF_SPACE_ID --build-arg CF_DELIVERY_ACCESS_TOKEN=$CF_DELIVERY_ACCESS_TOKEN --build-arg CF_PREVIEW_ACCESS_TOKEN=$CF_PREVIEW_ACCESS_TOKEN --build-arg CF_ENVIRONMENT=$CF_ENVIRONMENT --build-arg PATREON_ACCESS_TOKEN=$PATREON_ACCESS_TOKEN --build-arg PATREON_CAMPAIGN_ID=$PATREON_CAMPAIGN_ID --build-arg GOOGLE_TAG_MANAGER_CONTAINER_ID=$GOOGLE_TAG_MANAGER_CONTAINER_ID .
@@ -70,8 +69,7 @@ jobs:
           KEY: ${{ secrets.SSH_SECRET_KEY }}
           envs: IMAGE_NAME,AWS_REGISTRY,AWS_REPOSITORY,GITHUB_SHA,COMMAND,CF_SPACE_ID,CF_DELIVERY_ACCESS_TOKEN,CF_PREVIEW_ACCESS_TOKEN,CF_ENVIRONMENT,MAILGUN_API_KEY,PATREON_ACCESS_TOKEN,PATREON_CAMPAIGN_ID,GOOGLE_TAG_MANAGER_CONTAINER_ID
           script: |
-            aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin $AWS_REGISTRY
-            docker pull ${REGISTRY}/${IMAGE_NAME}:$(echo $GITHUB_SHA | head -c7)
+            docker pull ${AWS_REGISTRY}/${AWS_REPOSITORY}:${IMAGE_NAME}
             docker stop $IMAGE_NAME
             docker rm $IMAGE_NAME
             docker run -d \
@@ -88,7 +86,7 @@ jobs:
             --label traefik.docker.network=traefik-public \
             --label traefik.http.middlewares.https-redirect.redirectscheme.scheme=https \
             --label traefik.http.middlewares.https-redirect.redirectscheme.permanent=true \
-            --label traefik.http.routers.app-http.middlewares=https-redirect 
+            --label traefik.http.routers.app-http.middlewares=https-redirect \
             --label traefik.http.routers.app-http.rule=Host\(\`veganhacktivists.org\`\) \
             --label traefik.http.routers.app-http.entrypoints=http \
             --label traefik.http.routers.app-https.rule=Host\(\`veganhacktivists.org\`\) \
@@ -97,4 +95,4 @@ jobs:
             --label traefik.http.routers.app-https.entrypoints=https \
             --label traefik.http.services.app.loadbalancer.server.port=80 \
             --network=traefik-public \
-            --name $(echo $IMAGE_NAME) $(echo $AWS_REGISTRY)/$(echo $AWS_REPOSITORY):$(echo $IMAGE_NAME)
+            --name $IMAGE_NAME ${AWS_REGISTRY}/${AWS_REPOSITORY}:${IMAGE_NAME}
