--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-select": "^4.3.1",
     "react-toastify": "^8.0.2",
     "react-use-pagination": "^2.0.1",
+    "react-waypoint": "^10.1.0",
     "sharp": "^0.29.1",
     "tailwindcss": "^2.2.12"
   },
