--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,17 @@
     "react/jsx-fragments": ["warn"],
     "react/jsx-pascal-case": ["error"],
     "react/display-name": ["off"],
+    "react/forbid-elements": ["warn", { "forbid": ["Image"] }],
+    "jsx-a11y/alt-text": [
+      2,
+      {
+        "elements": ["img", "object", "area", "input[type=\"image\"]"],
+        "img": ["Image", "CustomImage"],
+        "object": ["Object"],
+        "area": ["Area"],
+        "input[type=\"image\"]": ["InputImage"]
+      }
+    ],
 
     // typescript
     "@typescript-eslint/consistent-type-imports": [
