--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "http-status-codes": "^2.1.4",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
     "react-hook-form": "^7.15.1",
