--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.21.4",
     "classnames": "^2.3.1",
     "contentful": "^9.0.0",
+    "crypto-js": "^4.1.1",
     "fuse.js": "^6.4.6",
     "http-status-codes": "^2.1.4",
     "next": "11.1.2",
@@ -43,6 +44,7 @@
     "@testing-library/dom": "^8.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@types/crypto-js": "^4.0.2",
     "@types/mailchimp__mailchimp_marketing": "^3.0.2",
     "@types/react": "17.0.24",
     "@types/react-gtm-module": "^2.0.1",
