--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
     "react-hook-form": "^7.15.1",
+    "react-hot-toast": "^2.1.1",
     "react-select": "^5.0.0",
-    "react-toastify": "^8.0.2",
     "react-use-pagination": "^2.0.1",
     "react-waypoint": "^10.1.0",
     "sharp": "^0.29.1",
