--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "classnames": "^2.3.1",
     "contentful": "^9.0.0",
     "crypto-js": "^4.1.1",
+    "form-data": "^4.0.0",
     "fuse.js": "^6.4.6",
     "http-status-codes": "^2.1.4",
+    "mailgun.js": "^3.5.9",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
