--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "@mailchimp/mailchimp_marketing": "^3.0.66",
     "@react-spring/web": "^9.2.4",
     "@tailwindcss/line-clamp": "^0.2.1",
-    "axios": "^0.21.4",
     "classnames": "^2.3.1",
     "contentful": "^9.0.0",
     "crypto-js": "^4.1.1",
     "form-data": "^4.0.0",
     "fuse.js": "^6.4.6",
+    "got": "^11.8.2",
     "http-status-codes": "^2.1.4",
+    "ky": "^0.28.5",
     "mailgun.js": "^3.5.9",
     "next": "11.1.2",
     "react": "17.0.2",
