--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "autoprefixer": "^10.3.7",
     "babel-jest": "^27.3.0",
-    "eslint": "8.0.1",
+    "eslint": "^7.0.0",
     "eslint-config-next": "11.1.2",
     "husky": "^7.0.2",
     "identity-obj-proxy": "^3.0.0",
