--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ky": "^0.28.6",
     "mailgun.js": "^3.6.0",
     "next": "11.1.2",
+    "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
