--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,8 @@ env:
   PATREON_CAMPAIGN_ID: ${{ secrets.PATREON_CAMPAIGN_ID }}
   GOOGLE_TAG_MANAGER_CONTAINER_ID: ${{ secrets.GOOGLE_TAG_MANAGER_CONTAINER_ID }}
   MAILCHIMP_AUDIENCE_ID: ${{ secrets.MAILCHIMP_AUDIENCE_ID }}
+  MAILCHIMP_API_KEY: ${{ secrets.MAILCHIMP_API_KEY }}
+  MAILCHIMP_SERVER_ID: ${{ secrets.MAILCHIMP_SERVER_ID }}
 
 jobs:
   build_and_push:
@@ -67,7 +69,7 @@ jobs:
           HOST: ${{ secrets.HOST }}
           USERNAME: ${{ secrets.USERNAME }}
           KEY: ${{ secrets.SSH_SECRET_KEY }}
-          envs: IMAGE_NAME,AWS_REGISTRY,AWS_REPOSITORY,GITHUB_SHA,COMMAND,CF_SPACE_ID,CF_DELIVERY_ACCESS_TOKEN,CF_PREVIEW_ACCESS_TOKEN,CF_ENVIRONMENT,MAILGUN_API_KEY,PATREON_ACCESS_TOKEN,PATREON_CAMPAIGN_ID,GOOGLE_TAG_MANAGER_CONTAINER_ID
+          envs: IMAGE_NAME,AWS_REGISTRY,AWS_REPOSITORY,GITHUB_SHA,COMMAND,CF_SPACE_ID,CF_DELIVERY_ACCESS_TOKEN,CF_PREVIEW_ACCESS_TOKEN,CF_ENVIRONMENT,MAILGUN_API_KEY,PATREON_ACCESS_TOKEN,PATREON_CAMPAIGN_ID,GOOGLE_TAG_MANAGER_CONTAINER_ID,MAILCHIMP_AUDIENCE_ID,MAILCHIMP_API_KEY,MAILCHIMP_SERVER_ID
           script: |
             aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 182016694564.dkr.ecr.us-east-2.amazonaws.com
             docker pull ${AWS_REGISTRY}/${AWS_REPOSITORY}:${IMAGE_NAME}
@@ -84,6 +86,8 @@ jobs:
             --env PATREON_CAMPAIGN_ID=$PATREON_CAMPAIGN_ID \
             --env NEXT_PUBLIC_GOOGLE_TAG_MANAGER_CONTAINER_ID=$GOOGLE_TAG_MANAGER_CONTAINER_ID \
             --env MAILCHIMP_AUDIENCE_ID=$MAILCHIMP_AUDIENCE_ID \
+            --env MAILCHIMP_API_KEY=$MAILCHIMP_API_KEY \
+            --env MAILCHIMP_SERVER_ID=$MAILCHIMP_SERVER_ID \
             --label traefik.enable=true \
             --label traefik.docker.network=traefik-public \
             --label traefik.http.middlewares.https-redirect.redirectscheme.scheme=https \
