--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@typescript-eslint/parser": "^5.2.0",
     "autoprefixer": "^10.3.7",
     "babel-jest": "^27.3.0",
-    "eslint": "^8.1.0",
+    "eslint": "<8.0.0",
     "eslint-config-next": "12.0.1",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
