--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-use-pagination": "^2.0.1",
     "react-waypoint": "^10.1.0",
     "sharp": "^0.29.2",
-    "tailwindcss": "^2.2.17"
+    "tailwindcss": "^2.2.17",
+    "zustand": "^3.6.3"
   },
   "devDependencies": {
     "@axe-core/react": "^4.2.2",
