--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "Vegan Hacktivists",
   "short_name": "Hacktivists",
   "lang": "en-US",
-  "start_url": "https://veganhacktivists.org/",
+  "start_url": "/",
   "display": "minimal-ui",
   "theme_color": "#000000",
   "background_color": "#000000",
