--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,9 @@ yarn-error.log*
 # vercel
 .vercel
 
+# vscode settings
 .vscode/settings.json
+
+# PWA build-time generated files
+**/public/workbox-*.js
+**/public/sw.js
