--- a/package.json
+++ b/package.json
@@ -12,15 +12,13 @@
     "contentful-typescript-codegen": "contentful-typescript-codegen --output src/types/generated/contentful.d.ts"
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.5.1",
+    "@contentful/rich-text-react-renderer": "^15.6.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
-    "@mailchimp/mailchimp_marketing": "^3.0.70",
+    "@mailchimp/mailchimp_marketing": "^3.0.72",
     "@react-spring/web": "^9.3.0",
-    "@swc/cli": "^0.1.51",
-    "@swc/core": "1.2.95",
     "@swc/core-linux-musl": "^1.2.42",
     "@tailwindcss/line-clamp": "^0.2.2",
     "classnames": "^2.3.1",
@@ -30,40 +28,40 @@
     "fuse.js": "^6.4.6",
     "got": "^11.8.2",
     "http-status-codes": "^2.1.4",
-    "ky": "^0.28.6",
-    "mailgun.js": "^3.7.0",
-    "next": "12.0.1",
+    "ky": "^0.28.7",
+    "mailgun.js": "^3.7.2",
+    "next": "12.0.3",
     "next-pwa": "^5.4.0",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
-    "react-hook-form": "^7.18.0",
-    "react-select": "^5.1.0",
-    "react-toastify": "^8.0.2",
+    "react-hook-form": "^7.19.1",
+    "react-select": "^5.2.1",
+    "react-toastify": "^8.1.0",
     "react-use-pagination": "^2.0.1",
     "react-waypoint": "^10.1.0",
     "sharp": "^0.29.2",
-    "tailwindcss": "^2.2.17",
-    "zustand": "^3.6.3"
+    "tailwindcss": "^2.2.19",
+    "zustand": "^3.6.5"
   },
   "devDependencies": {
     "@axe-core/react": "^4.2.2",
-    "@testing-library/dom": "^8.9.1",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/dom": "^8.11.0",
+    "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@types/crypto-js": "^4.0.2",
     "@types/mailchimp__mailchimp_marketing": "^3.0.2",
-    "@types/react": "17.0.33",
+    "@types/react": "17.0.34",
     "@types/react-gtm-module": "^2.0.1",
-    "@types/tailwindcss": "^2.2.2",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
-    "autoprefixer": "^10.3.7",
+    "@types/tailwindcss": "^2.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "autoprefixer": "^10.4.0",
     "babel-jest": "^27.3.0",
-    "eslint": "<8.0.0",
-    "eslint-config-next": "12.0.1",
+    "eslint": "8.2.0",
+    "eslint-config-next": "12.0.3",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.0",
@@ -98,8 +96,7 @@
     }
   },
   "optionalDependencies": {
-    "@next/swc-linux-x64-musl": "^12.0.1-canary.2",
-    "contentful-management": "^7.44.2",
+    "contentful-management": "^7.45.0",
     "contentful-typescript-codegen": "^3.2.2"
   }
 }
