--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
+    "react-highlight-words": "^0.17.0",
     "react-hook-form": "^7.18.0",
     "react-select": "^5.1.0",
     "react-toastify": "^8.0.2",
@@ -53,6 +54,7 @@
     "@types/mailchimp__mailchimp_marketing": "^3.0.2",
     "@types/react": "17.0.33",
     "@types/react-gtm-module": "^2.0.1",
+    "@types/react-highlight-words": "^0.16.3",
     "@types/tailwindcss": "^2.2.2",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
