--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
     "@mailchimp/mailchimp_marketing": "^3.0.72",
     "@react-spring/web": "^9.3.0",
     "@tailwindcss/line-clamp": "^0.2.2",
+    "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "contentful": "^9.1.4",
     "crypto-js": "^4.1.1",
     "form-data": "^4.0.0",
     "fuse.js": "^6.4.6",
-    "got": "^11.8.2",
     "http-status-codes": "^2.1.4",
-    "ky": "^0.28.7",
     "mailgun.js": "^4.1.0",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
