--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "crypto-js": "^4.1.1",
     "form-data": "^4.0.0",
     "fuse.js": "^6.4.6",
-    "got": "^11.8.2",
     "http-status-codes": "^2.1.4",
     "ky": "^0.28.7",
+    "ky-universal": "^0.9.1",
     "mailgun.js": "^4.1.0",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
