--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-use-pagination": "^2.0.1",
     "react-waypoint": "^10.1.0",
     "sharp": "^0.29.2",
+    "styled-components": "^5.3.3",
     "tailwindcss": "^3.0.2",
     "zustand": "^3.6.6"
   },
@@ -57,6 +58,7 @@
     "@types/react": "17.0.37",
     "@types/react-gtm-module": "^2.0.1",
     "@types/react-highlight-words": "^0.16.3",
+    "@types/styled-components": "^5.1.19",
     "@types/tailwindcss": "^2.2.4",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
