--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-highlight-words": "^0.17.0",
     "react-hook-form": "^7.20.5",
     "react-select": "^5.2.1",
+    "react-syntax-highlighter": "^15.4.5",
     "react-toastify": "^8.1.0",
     "react-use-pagination": "^2.0.1",
     "react-waypoint": "^10.1.0",
@@ -58,6 +59,7 @@
     "@types/react": "17.0.37",
     "@types/react-gtm-module": "^2.0.1",
     "@types/react-highlight-words": "^0.16.3",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "@types/styled-components": "^5.1.19",
     "@types/tailwindcss": "^2.2.4",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
