--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-gtm-module": "^2.0.11",
     "react-highlight-words": "^0.17.0",
     "react-hook-form": "^7.20.5",
