--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "react-toastify": "^8.1.0",
     "react-use-pagination": "^2.0.1",
     "react-waypoint": "^10.1.0",
+    "sass": "^1.49.0",
     "sharp": "^0.29.2",
-    "styled-components": "^5.3.3",
     "tailwindcss": "^3.0.2",
     "zustand": "^3.6.6"
   },
@@ -61,7 +61,6 @@
     "@types/react-gtm-module": "^2.0.1",
     "@types/react-highlight-words": "^0.16.3",
     "@types/react-syntax-highlighter": "^13.5.2",
-    "@types/styled-components": "^5.1.19",
     "@types/tailwindcss": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
@@ -99,7 +98,7 @@
     "moduleNameMapper": {
       "\\.(eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(jpg|jpeg|png|gif)$": "<rootDir>/src/__mocks__/imageMock.js",
-      "\\.(css|less)$": "identity-obj-proxy"
+      "\\.(css|scss|sass|less)$": "identity-obj-proxy"
     }
   },
   "optionalDependencies": {
