--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-gtm-module": "^2.0.11",
     "react-highlight-words": "^0.17.0",
     "react-hook-form": "^7.20.5",
+    "react-modal": "^3.14.4",
     "react-select": "^5.2.1",
     "react-syntax-highlighter": "^15.4.5",
     "react-toastify": "^8.1.1",
@@ -60,6 +61,7 @@
     "@types/react": "17.0.38",
     "@types/react-gtm-module": "^2.0.1",
     "@types/react-highlight-words": "^0.16.3",
+    "@types/react-modal": "^3.13.1",
     "@types/react-syntax-highlighter": "^13.5.2",
     "@types/tailwindcss": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
