--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-waypoint": "^10.1.0",
     "sass": "^1.49.0",
     "sharp": "^0.29.2",
+    "simple-react-lightbox": "^3.6.9-0",
     "tailwindcss": "^3.0.2",
     "zustand": "^3.6.6"
   },
@@ -63,6 +64,7 @@
     "@types/react-highlight-words": "^0.16.3",
     "@types/react-modal": "^3.13.1",
     "@types/react-syntax-highlighter": "^13.5.2",
+    "@types/simple-react-lightbox": "^3.6.1",
     "@types/tailwindcss": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
