--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-highlight-words": "^0.17.0",
     "react-hook-form": "^7.27.1",
     "react-modal": "^3.14.4",
+    "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.2.1",
     "react-syntax-highlighter": "^15.4.5",
     "react-toastify": "^8.2.0",
@@ -48,7 +49,6 @@
     "react-waypoint": "^10.1.0",
     "sass": "^1.49.9",
     "sharp": "^0.30.2",
-    "simple-react-lightbox": "^3.6.9-0",
     "tailwindcss": "^3.0.23",
     "zustand": "^3.7.1"
   },
@@ -64,7 +64,6 @@
     "@types/react-highlight-words": "^0.16.3",
     "@types/react-modal": "^3.13.1",
     "@types/react-syntax-highlighter": "^13.5.2",
-    "@types/simple-react-lightbox": "^3.6.1",
     "@types/tailwindcss": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
