--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@contentful/rich-text-react-renderer": "^15.5.1",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@mailchimp/mailchimp_marketing": "^3.0.72",
