--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "contentful-typescript-codegen": "contentful-typescript-codegen --output src/types/generated/contentful.d.ts"
   },
   "dependencies": {
+    "@brail/core": "^0.1.0",
+    "@brail/mjml": "^0.0.1",
+    "@brail/react": "^0.0.9",
     "@contentful/rich-text-plain-text-renderer": "^15.12.1",
     "@contentful/rich-text-react-renderer": "^15.12.1",
     "@floating-ui/react-dom-interactions": "^0.9.1",
