--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@mailchimp/mailchimp_marketing": "^3.0.75",
+    "@prisma/client": "3.15.2",
     "@react-spring/web": "^9.4.5",
     "@tailwindcss/line-clamp": "^0.4.0",
     "classnames": "^2.3.1",
@@ -78,6 +79,7 @@
     "lint-staged": "^13.0.2",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "prisma": "^3.15.2",
     "typescript": "4.7.4"
   },
   "jest": {
