--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@mailchimp/mailchimp_marketing": "^3.0.72",
+    "@prisma/client": "3.15.2",
     "@react-spring/web": "^9.4.3",
     "@tailwindcss/line-clamp": "^0.3.1",
     "classnames": "^2.3.1",
@@ -79,6 +80,7 @@
     "lint-staged": "^12.3.5",
     "postcss": "^8.4.8",
     "prettier": "^2.5.1",
+    "prisma": "^3.15.2",
     "typescript": "4.6.2"
   },
   "jest": {
