--- a/package.json
+++ b/package.json
@@ -12,74 +12,74 @@
     "contentful-typescript-codegen": "contentful-typescript-codegen --output src/types/generated/contentful.d.ts"
   },
   "dependencies": {
-    "@contentful/rich-text-plain-text-renderer": "^15.6.2",
-    "@contentful/rich-text-react-renderer": "^15.5.1",
+    "@contentful/rich-text-plain-text-renderer": "^15.12.1",
+    "@contentful/rich-text-react-renderer": "^15.12.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "@mailchimp/mailchimp_marketing": "^3.0.72",
-    "@react-spring/web": "^9.4.3",
-    "@tailwindcss/line-clamp": "^0.3.1",
+    "@mailchimp/mailchimp_marketing": "^3.0.75",
+    "@react-spring/web": "^9.4.5",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "classnames": "^2.3.1",
-    "contentful": "^9.1.12",
+    "contentful": "^9.1.32",
     "crypto-js": "^4.1.1",
     "form-data": "^4.0.0",
-    "fuse.js": "^6.4.6",
+    "fuse.js": "^6.6.2",
     "http-status-codes": "^2.1.4",
     "ky": "^0.30.0",
-    "ky-universal": "^0.10.0",
-    "mailgun.js": "^5.0.1",
-    "next": "12.1.0",
-    "next-pwa": "^5.4.5",
-    "next-seo": "^5.1.0",
-    "react": "17.0.2",
+    "ky-universal": "^0.10.1",
+    "mailgun.js": "^7.0.2",
+    "next": "12.1.6",
+    "next-pwa": "^5.5.4",
+    "next-seo": "^5.4.0",
+    "react": "18.2.0",
     "react-cookie": "^4.1.1",
-    "react-dom": "17.0.2",
+    "react-dom": "18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-gtm-module": "^2.0.11",
-    "react-highlight-words": "^0.17.0",
-    "react-hook-form": "^7.27.1",
-    "react-modal": "^3.14.4",
-    "react-qr-code": "^2.0.5",
+    "react-highlight-words": "^0.18.0",
+    "react-hook-form": "^7.32.2",
+    "react-modal": "^3.15.1",
+    "react-qr-code": "^2.0.7",
     "react-responsive-carousel": "^3.2.23",
-    "react-select": "^5.2.1",
-    "react-syntax-highlighter": "^15.4.5",
-    "react-toastify": "^8.2.0",
+    "react-select": "^5.3.2",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^9.0.4",
     "react-use-pagination": "^2.0.1",
-    "react-waypoint": "^10.1.0",
-    "sass": "^1.49.9",
-    "sharp": "^0.30.2",
-    "tailwindcss": "^3.0.23",
-    "zustand": "^3.7.1"
+    "react-waypoint": "^10.3.0",
+    "sass": "^1.52.3",
+    "sharp": "^0.30.6",
+    "tailwindcss": "^3.1.3",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
-    "@axe-core/react": "^4.4.0",
-    "@testing-library/dom": "^8.11.1",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
+    "@axe-core/react": "^4.4.3",
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@types/crypto-js": "^4.1.1",
-    "@types/mailchimp__mailchimp_marketing": "^3.0.2",
-    "@types/react": "17.0.39",
+    "@types/mailchimp__mailchimp_marketing": "^3.0.5",
+    "@types/react": "18.0.14",
     "@types/react-gtm-module": "^2.0.1",
     "@types/react-highlight-words": "^0.16.3",
     "@types/react-modal": "^3.13.1",
-    "@types/react-syntax-highlighter": "^13.5.2",
-    "@types/tailwindcss": "^3.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
-    "autoprefixer": "^10.4.0",
-    "babel-jest": "^27.5.1",
-    "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0",
-    "husky": "^7.0.4",
+    "@types/react-syntax-highlighter": "^15.5.2",
+    "@types/tailwindcss": "^3.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "autoprefixer": "^10.4.7",
+    "babel-jest": "^28.1.1",
+    "eslint": "8.18.0",
+    "eslint-config-next": "12.1.6",
+    "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.5.1",
-    "lint-staged": "^12.3.5",
-    "postcss": "^8.4.8",
-    "prettier": "^2.5.1",
-    "typescript": "4.6.2"
+    "jest": "^28.1.1",
+    "lint-staged": "^13.0.2",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "typescript": "4.7.4"
   },
   "jest": {
     "setupFilesAfterEnv": [
@@ -107,7 +107,7 @@
     }
   },
   "optionalDependencies": {
-    "contentful-management": "^8.2.0",
+    "contentful-management": "^10.6.3",
     "contentful-typescript-codegen": "^3.2.2"
   }
 }
