--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "vh-site",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "scripts": {
     "prepare": "husky install",
     "dev": "NODE_OPTIONS='--inspect' next dev",
@@ -56,6 +59,7 @@
   },
   "devDependencies": {
     "@axe-core/react": "^4.4.3",
+    "@faker-js/faker": "^7.2.0",
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -80,6 +84,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prisma": "^3.15.2",
+    "ts-node": "^10.8.1",
     "typescript": "4.7.4"
   },
   "jest": {
